--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,17 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Setup Node js environment
-      run: echo Hello, world!
+  
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Setup Node js environm
       uses: actions/setup-Node@v2-beta
       with:
-        cmd: install  #/Yarn Install
+         version: 12   
+    - name: Github Action for Yarn
+      uses: Boarles/actions-yarn@v2.1.0
+      with : 
+        cmd: install
         
     - name: Creating build
       run: yarn build 
