--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       with:
          version: 12   
     - name: Github Action for Yarn
-      uses: Boarles/actions-yarn@v2.1.0
+      uses: Borales/actions-yarn@v2.1.0
       with : 
         cmd: install
         
